# rust-kv

./: Cargo.toml
examples/: client.rs  dummy_server.rs
src/: error.rs  lib.rs
src/pb/: mod.rs
src/service/: command_service.rs  mod.rs
src/storage/: memory.rs  mod.rs
