[package]
name = "rust-kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
prost = "0.9.0"
tracing = "0.1.0"
thiserror = "1.0"
dashmap = "3.9.1"

[dev-dependencies]
anyhow = "1.0.45"
async-prost = "0.3.0"
futures = "0.3.17"
tokio = { version = "1", features = [
    "rt",
    "rt-multi-thread",
    "io-util",
    "macros",
    "net",
] }
tracing-subscriber = "0.3.1"

[build-dependencies]
prost-build = "0.9.0"
